--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,12 @@ nav button{
 .flex {
     display: flex;
 }
+
+.flex-3 {
+    display: flex;
+    flex-direction: column;
+}
+
 .center {
     align-items: center;
     justify-content: center;
@@ -82,4 +88,30 @@ nav button{
 
 .gap-1 {
     gap: 20px;
+}
+
+.gap-2 {
+    gap: 40px;
+}
+
+.card-img {
+    width: 32px;
+    background-color: #F95555;
+    border-radius: 40px;
+    padding: 20px;
+}
+.font-48 {
+    font-size: 48px;
+}
+
+.font-24 {
+    font-size: 24px;
+}
+
+.gray-font {
+    color: #627382;
+}
+
+.margin {
+    margin-top: 10px;
 }
