--- a/styles.css
+++ b/styles.css
@@ -113,5 +113,31 @@ nav button{
 }
 
 .margin {
-    margin-top: 10px;
+    margin-top: 40px;
 }
+
+.gap-3 {
+    gap: 70px;
+    margin-top: 20px;
+}
+
+.check {
+    width: 20px;
+    height: 20px;
+}
+
+.gap-4 {
+    gap: 5px;
+}
+
+.flex-4 {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.center-2 {
+    align-items: center;
+}
+
+
